# kuka_brazil

./: CMakeLists.txt  package.xml
config/: init_params.yaml
config/common/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml
config/global/: global_costmap_params.yaml  local_costmap_params.yaml
config/local/: global_costmap_params.yaml  local_costmap_params.yaml
include/: AutomappingNode.h  ExplorationHelper.h  MoveToTableNode.h  RobotClass.hpp
launch/: 2dslam.launch  amcl.launch  automapping.launch  move_base_global.launch  move_base_local.launch  move_to_table.launch  move_to_table_stage.launch  table_detector.launch
map/: debug.world  red.pgm  red.yaml  red_brazil.pgm  red_brazil.yaml  red_brazil2.pgm  red_brazil2.yaml  red_brazil3.pgm  red_brazil_after_paint.pgm  red_brazil_after_paint.yaml  test.pgm  test.yaml
rviz/: first_stage.rviz  second_stage.rviz
src/: AutomappingNode.cpp  ExplorationHelper.cpp  MoveToTableNode.cpp  RobotClass.cpp  auto_map_v2.cpp  automapping.cpp  automapping_old_but_stable.cpp  exploration.cpp  move_to_table.cpp  stopper.cpp  table_detector.cpp
