<?xml version="1.0"?>
<package>

  <name>kuka_brazil</name>

  <version>0.0.0</version>

  <description>The kuka_brazil package</description>

  <maintainer email="evgeniy2@todo.todo">evgeniy2</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>std_srvs</build_depend>
  <run_depend>std_srvs</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>OpenCV</build_depend>	
  <run_depend>OpenCV</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>move_base_msgs</build_depend>
  <run_depend>move_base_msgs</run_depend>

  <build_depend>kuka_brazil_msgs</build_depend>
  <run_depend>kuka_brazil_msgs</run_depend>

  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>

  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>

  <export></export>

</package>
